--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ message(STATUS "GTEST_INCLUDE_DIRS=${GTEST_INCLUDE_DIRS}")
 set(TESTS
     test_leftApply
     test_rightApply
+    test_Coupling
    )
 
 foreach(t ${TESTS})
