Add Lindblad properties.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ set(TESTS
     test_Decay
    )
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 foreach(t ${TESTS})
   add_executable(${t} ${t}.cpp)
   target_link_libraries(${t} qsys gtest_main gtest)
