--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ option(LINDBLAD_BUILD_TESTS "Whether to build tests" OFF)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 add_subdirectory(src)
+add_subdirectory(examples)
 if(LINDBLAD_BUILD_TESTS)
   add_subdirectory(gtest-1.7.0)
   include_directories(${gtest_SOURCE_DIR}/include)
