Add EIT example.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_executable(RabiOscillations RabiOscillations.cpp)
-target_link_libraries(RabiOscillations qsys)
-add_test(RabiOscillations RabiOscillations)
+set(EXAMPLES
+    RabiOscillations
+    EIT)
+foreach(e ${EXAMPLES})
+  add_executable(${e} ${e}.cpp)
+  target_link_libraries(${e} qsys)
+  add_test(${e} ${e})
+endforeach()
 
