Move implementation details to separate folder.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-message(STATUS "GTEST_INCLUDE_DIRS=${GTEST_INCLUDE_DIRS}")
+include_directories(${PROJECT_SOURCE_DIR}/include/detail)
 set(TESTS
     test_leftApply
     test_rightApply
