--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
+include_directories(${PROJECT_SOURCE_DIR}/include/detail)
 add_library(qsys
     qsys.cpp
     Integrator.cpp
     RK4.cpp
     MasterEqnRhs.cpp
+    SparseApply.cpp
     )
 
