Rename files qsys -> Lindblad.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,7 +3,7 @@ set(EXAMPLES
     EIT)
 foreach(e ${EXAMPLES})
   add_executable(${e} ${e}.cpp)
-  target_link_libraries(${e} qsys)
+  target_link_libraries(${e} lindblad)
   add_test(${e} ${e})
 endforeach()
 
