--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(${PROJECT_SOURCE_DIR}/include/detail)
-add_library(qsys
-    qsys.cpp
+add_library(lindblad
+    Lindblad.cpp
     Integrator.cpp
     RK4.cpp
     MasterEqnRhs.cpp
