Rename master eqn test file to be consistent with class name.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ set(TESTS
     test_Coupling
     test_Decay
     test_MasterEqnRhs
-    test_MasterEquation
+    test_MasterEqn
     test_Integrator
     test_RK4
    )
