Rename Lindblad compilation unit to MasterEqn.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(${PROJECT_SOURCE_DIR}/include/detail)
 add_library(lindblad
-    Lindblad.cpp
+    MasterEqn.cpp
     Integrator.cpp
     RK4.cpp
     MasterEqnRhs.cpp
