--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories(${PROJECT_SOURCE_DIR}/include/detail)
 add_library(lindblad
     MasterEqn.cpp
+    MasterEqnEvolution.cpp
     Integrator.cpp
     RK4.cpp
     SparseApply.cpp
