Set -pc_type none as default for steady state examples.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -24,7 +24,7 @@ if(PETSC_FOUND)
 foreach(e ${PETSC_EXAMPLES})
   add_executable(${e} ${e}.cpp)
   target_link_libraries(${e} lindblad ${PETSC_LIBS} lapack blas pthread ${DL_LIBRARIES})
-  add_test(${e} ${e} -pc_type none)
+  add_test(${e} ${e})
 endforeach()
 endif()
 
