Add SourceSink mechanism for master equations.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,12 @@
 include_directories(${PROJECT_SOURCE_DIR}/include/detail)
 add_library(lindblad
-    MasterEqn.cpp
-    MasterEqnEvolution.cpp
-    Integrator.cpp
-    RK4.cpp
-    SparseApply.cpp
     Coupling.cpp
     Decay.cpp
+    Integrator.cpp
+    MasterEqn.cpp
+    MasterEqnEvolution.cpp
+    RK4.cpp
+    SourceSink.cpp
+    SparseApply.cpp
     )
 
