Add aligned stack allocation function.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(lindblad
     Integrator.cpp
     MasterEqn.cpp
     MasterEqnEvolution.cpp
+    Memory.cpp
     RK4.cpp
     SourceSink.cpp
     SparseApply.cpp
