Add coveralls configuration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ compiler:
   - g++
 before_install:
   - sh ./utilities/download_gtest.sh
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq lcov
+  - gem install coveralls-lcov
   - sudo apt-get install libblas-dev libatlas-dev liblapack-dev
   - sudo apt-get install -qq python-numpy
   - sh ./utilities/get_petsc.sh
@@ -15,3 +18,9 @@ script:
   - make
   - ctest --output-on-failure
   - rm -rf *
+after_success:
+  - lcov -d tests -d src -d examples -base-directory .. -c -o coverage.info
+  - lcov --remove coverage.info '/usr/*' -o coverage.info
+  - lcov --remove coverage.info 'gtest*' -o coverage.info
+  - cd ..
+  - coveralls-lcov build/coverage.info
