Add coverage flags.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 script:
   - mkdir -p build
   - cd build
-  - cmake -DLINDBLAD_BUILD_TESTS=ON -DPETSC_DIR=../petsc-cpucmplx ..
+  - cmake -DLINDBLAD_BUILD_TESTS:BOOL=ON -DLINDBLAD_ENABLE_COVERAGE:BOOL=ON -DPETSC_DIR:PATH=../petsc-cpucmplx ..
   - make
   - ctest --output-on-failure
   - rm -rf *
@@ -22,5 +22,6 @@ after_success:
   - lcov -d tests -d src -d examples -base-directory .. -c -o coverage.info
   - lcov --remove coverage.info '/usr/*' -o coverage.info
   - lcov --remove coverage.info 'gtest*' -o coverage.info
+  - lcov --remove coverage.info 'petsc-cpucmplx/*' -o coverage.info
   - cd ..
   - coveralls-lcov build/coverage.info
