--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,17 @@ enable_testing()
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")
 
 option(LINDBLAD_BUILD_TESTS "Whether to build tests" OFF)
+option(LINDBLAD_ENABLE_COVERAGE "Instrument tests for coverage" OFF)
+
+if(CMAKE_COMPILER_IS_GNUCC OR "${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
+  if(MBO_ENABLE_COVERAGE)
+    add_definitions("-ftest-coverage -fprofile-arcs")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ftest-coverage -fprofile-arcs")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftest-coverage -fprofile-arcs")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -ftest-coverage -fprofile-arcs")
+    set(COV_LIBRARIES gcov)
+  endif()
+endif
 
 include_directories(
     ${PROJECT_SOURCE_DIR}/include
