Don't python script tests on windows.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -43,6 +43,8 @@ set(PYTHON_SCRIPT_TESTS
 if(PETSC_FOUND)
   list(APPEND PYTHON_SCRIPT_TESTS scanEIT)
 endif()
-foreach(s ${PYTHON_SCRIPT_TESTS})
-  add_test(NAME test_${s} COMMAND python ${s}.py)
-endforeach()
+if(NOT WIN32)
+  foreach(s ${PYTHON_SCRIPT_TESTS})
+    add_test(NAME test_${s} COMMAND python ${s}.py)
+  endforeach()
+endif()
