--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
 script:
   - mkdir -p build
   - cd build
-  - cmake -DLINDBLAD_BUILD_TESTS:BOOL=ON -DLINDBLAD_ENABLE_COVERAGE:BOOL=ON -DPETSC_DIR:PATH=../petsc-cpucmplx ..
+  - cmake -DLINDBLAD_BUILD_TESTS:BOOL=ON -DLINDBLAD_ENABLE_COVERAGE:BOOL=ON -DPETSC_DIR:PATH=../petsc-cpucmplx -DCMAKE_BUILD_TYPE:STRING=Debug ..
   - make
   - ctest --output-on-failure
 after_success:
