Build both shared and static versions of lindblad.
Link tests against static.
Add -fPIC.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,7 +3,7 @@ set(EXAMPLES
     EIT)
 foreach(e ${EXAMPLES})
   add_executable(${e} ${e}.cpp)
-  target_link_libraries(${e} lindblad)
+  target_link_libraries(${e} lindblad_shared)
   add_test(${e} ${e})
 endforeach()
 
@@ -23,7 +23,7 @@ endif()
 if(PETSC_FOUND)
   foreach(e ${PETSC_EXAMPLES})
     add_executable(${e} ${e}.cpp)
-    target_link_libraries(${e} lindblad ${PETSC_LIBS} lapack blas pthread ${DL_LIBRARIES})
+    target_link_libraries(${e} lindblad_shared ${PETSC_LIBS} lapack blas pthread ${DL_LIBRARIES})
     add_test(${e} ${e})
   endforeach()
 endif()
