--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories(${PROJECT_SOURCE_DIR}/include/detail)
 include_directories(${PROJECT_BINARY_DIR})
 add_library(lindblad
+    OBJECT
     Coupling.cpp
     Decay.cpp
     GeneralDecayOperator.cpp
@@ -12,4 +13,7 @@ add_library(lindblad
     RK45.cpp
     SparseApply.cpp
     )
+add_library(lindblad_static $<TARGET_OBJECTS:lindblad>)
+add_library(lindblad_shared SHARED $<TARGET_OBJECTS:lindblad>)
+set_target_properties(lindblad_shared PROPERTIES OUTPUT_NAME lindblad)
 
