--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,7 +18,7 @@ set(TESTS
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 foreach(t ${TESTS})
   add_executable(${t} ${t}.cpp)
-  target_link_libraries(${t} lindblad gtest_main gtest)
+  target_link_libraries(${t} lindblad_static gtest_main gtest)
   add_test(${t} ${t})
 endforeach()
 
