Fix builds on windows.
This includes the following fixes:
- Define the macro LINDBLAD_STATIC_DEFINE needed for building the static
  version of the lindblad library.
- Link examples and tests against the static version of lindblad.
- Define LINDBLAD_STATIC_DEFINE for the test and example targets.

In addition the ExportLindblad.h header was moved to the src directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 enable_testing()
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")
 include(CheckCXXCompilerFlag)
+include(GenerateExportHeader)
 
 option(LINDBLAD_BUILD_TESTS "Whether to build tests" OFF)
 option(LINDBLAD_ENABLE_COVERAGE "Instrument tests for coverage" OFF)
@@ -30,6 +31,7 @@ endif()
 include_directories(
     ${PROJECT_SOURCE_DIR}/include
     ${PROJECT_BINARY_DIR}
+    ${PROJECT_BINARY_DIR}/src
     )
 add_subdirectory(src)
 add_subdirectory(examples)
@@ -44,8 +46,3 @@ try_compile(HAVE_PRAGMA_OMP_SIMD ${PROJECT_BINARY_DIR}/cmake
             ${PROJECT_SOURCE_DIR}/cmake/try_compile/pragma_omp_simd.cpp)
 configure_file(config.h.in config.h)
 
-include(GenerateExportHeader)
-generate_export_header(lindblad_shared
-    EXPORT_FILE_NAME LindbladExport.h
-    EXPORT_MACRO_NAME LINDBLAD_API
-    )
