--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,7 +3,8 @@ set(EXAMPLES
     EIT)
 foreach(e ${EXAMPLES})
   add_executable(${e} ${e}.cpp)
-  target_link_libraries(${e} lindblad_shared)
+  target_link_libraries(${e} lindblad_static)
+  set_target_properties(${e} PROPERTIES COMPILE_FLAGS -DLINDBLAD_STATIC_DEFINE)
   add_test(${e} ${e})
 endforeach()
 
@@ -23,7 +24,7 @@ endif()
 if(PETSC_FOUND)
   foreach(e ${PETSC_EXAMPLES})
     add_executable(${e} ${e}.cpp)
-    target_link_libraries(${e} lindblad_shared ${PETSC_LIBS} lapack blas pthread ${DL_LIBRARIES})
+    target_link_libraries(${e} lindblad_static {PETSC_LIBS} lapack blas pthread ${DL_LIBRARIES})
     add_test(${e} ${e})
   endforeach()
 endif()
