--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -30,7 +30,7 @@ endif()
 if(PETSC_FOUND)
   foreach(e ${PETSC_EXAMPLES})
     add_executable(${e} ${e}.cpp)
-    target_link_libraries(${e} ${LINDBLAD_LIBRARY} {PETSC_LIBS} lapack blas pthread ${DL_LIBRARIES})
+    target_link_libraries(${e} ${LINDBLAD_LIBRARY} ${PETSC_LIBS} lapack blas pthread ${DL_LIBRARIES})
     add_test(${e} ${e})
   endforeach()
 endif()
