--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,19 +9,24 @@ include(GenerateExportHeader)
 
 option(LINDBLAD_BUILD_TESTS "Whether to build tests" OFF)
 option(LINDBLAD_ENABLE_COVERAGE "Instrument tests for coverage" OFF)
+option(LINDBLAD_WITH_ADDRESS_SANITIZER "Whether to build with address sanitizer enabled" OFF)
 
-set(CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS} -fsanitize=address")
-CHECK_CXX_COMPILER_FLAG("-fsanitize=address" HAVE_ADDRESS_SANITIZER)
-if(HAVE_ADDRESS_SANITIZER)
-  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address")
-  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=address")
+if(LINDBLAD_WITH_ADDRESS_SANITIZER)
+  set(OLD_CMAKE_REQUIRED_FLAGS ${CMAKE_REQUIRED_FLAGS})
+  set(CMAKE_REQUIRED_FLAGS "-fsanitize=address")
+  CHECK_CXX_COMPILER_FLAG(-fsanitize=address HAVE_ADDRESS_SANITIZER)
+  if(HAVE_ADDRESS_SANITIZER)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address")
+  endif()
+  set(CMAKE_REQUIRED_FLAGS ${OLD_CMAKE_REQUIRED_FLAGS})
 endif()
 
-set(CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS} -fopenmp-simd")
-CHECK_CXX_COMPILER_FLAG("-fopenmp-simd" HAVE_PRAGMA_OMP_SIMD)
+set(CMAKE_REQUIRED_FLAGS "-fopenmp-simd")
+CHECK_CXX_COMPILER_FLAG(-fopenmp-simd HAVE_PRAGMA_OMP_SIMD)
 if(HAVE_PRAGMA_OMP_SIMD)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -fopenmp-simd")
 endif()
+set(CMAKE_REQUIRED_FLAGS ${OLD_CMAKE_REQUIRED_FLAGS})
 
 if(CMAKE_COMPILER_IS_GNUCC OR "${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
   if(LINDBLAD_ENABLE_COVERAGE)
