--- a/doxyfile.in
+++ b/doxyfile.in
@@ -760,7 +760,8 @@ WARN_LOGFILE           =
 
 INPUT                  = \
   @PROJECT_SOURCE_DIR@/include \
-  @PROJECT_SOURCE_DIR@/doc
+  @PROJECT_SOURCE_DIR@/doc \
+  @PROJECT_BINARY_DIR@/doc
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
