--- a/config.h.in
+++ b/config.h.in
@@ -4,4 +4,4 @@
 #cmakedefine LINDBLAD_VER_MAJOR @LINDBLAD_VER_MAJOR@
 #cmakedefine LINDBLAD_VER_MINOR @LINDBLAD_VER_MINOR@
 #cmakedefine LINDBLAD_VER_PATCH @LINDBLAD_VER_PATCH@
-#cmakedfine LINDBLAD_VERSION "@LINDBLAD_VER"
+#cmakedefine LINDBLAD_VERSION "@LINDBLAD_VERSION@"
