Install export headers.
Also generate this header file in the top level of the build directory.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,7 @@ set(LINDBLAD_HDRS
 add_library(lindblad_static STATIC ${LINDBLAD_SRCS} ${LINDBLAD_HDRS})
 add_library(lindblad_shared SHARED ${LINDBLAD_SRCS} ${LINDBLAD_HDRS})
 generate_export_header(lindblad_shared
-    EXPORT_FILE_NAME LindbladExport.h
+    EXPORT_FILE_NAME ${PROJECT_BINARY_DIR}/LindbladExport.h
     BASE_NAME lindblad
     EXPORT_MACRO_NAME LINDBLAD_API
     )
@@ -41,4 +41,5 @@ set_target_properties(lindblad_static PROPERTIES
 	)
 
 install(TARGETS lindblad_static lindblad_shared DESTINATION lib)
+install(FILES ${PROJECT_BINARY_DIR}/LindbladExport.h DESTINATION include)
 
