--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -5,6 +5,9 @@ set(LINDBLAD_HEADERS
   MasterEqn.hpp
   SparseMatrix.hpp
   )
-install(FILES ${LINDBLAD_HEADERS} ${PROJECT_BINARY_DIR}/config.h ${PROJECT_BINARY_DIR}/LindbladExport.h
+install(FILES
+        ${LINDBLAD_HEADERS}
+        ${PROJECT_BINARY_DIR}/LindbladConfig.h
+        ${PROJECT_BINARY_DIR}/LindbladExport.h
         DESTINATION include)
 
